--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/ajay/CSS/index.css">
+    <link rel="stylesheet" href="/CSS/index.css">
     <title>Ajay</title>
 </head>
 
@@ -22,7 +22,7 @@
     </ul>
     <div>
         <section class="para">
-            <p id="inside"> <img src="/ajay/Images/ajay.png" width=20% height=22% id="ajp">Born in 1969 in <i>Chakradharpur</i>, a
+            <p id="inside"> <img src="/Images/ajay.png" width=20% height=22% id="ajp">Born in 1969 in <i>Chakradharpur</i>, a
                 small mining town in Jharkhand, Started from Delhi
                 and in
                 1999, he moved to Bombay and established himself as a practicing artist. From the beginning
